[package]
name = "owasm-std"
version = "0.13.0"
authors = ["Nikolay Volf <nikvolf@gmail.com>", "Sergey Shulepov <s.pepyakin@gmail.com>", "Oasis Labs <info@oasislabs.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/oasislabs/owasm-std"
homepage = "https://github.com/oasislabs/owasm-std"
documentation = "https://docs.rs/crate/owasm-std/"
description = "Rust WebAssembly standard library for contract development"
keywords = ["wasm", "oasislabs", "parity", "webassembly", "blockchain"]
categories = ["no-std", "embedded"]
exclude = [ "demo/*" ]

[dependencies]
byteorder = { version = "1", default-features = false }
parity-hash = { version = "1", default-features = false }
tiny-keccak = "1"

[features]
default = []
std = ["parity-hash/std"]
test = ["std"]
panic_with_msg = []
