[package]
name = "wasm-std-demo"
version = "0.0.0"
authors = ["NikVolf <nikvolf@gmail.com>"]
target-dir = "wasm"

[dependencies]
wasm-std = { path = "../" }

[build-dependencies]
wasm-build = { path = "../../wasm-utils/build" }

[[bin]]
name = "wasm-demo"
path = "src/main.rs"

[profile.release]
panic = "abort"
